encontro com orientator e alguns arquivos editados

--- a/_tcc_foto.ipynb
+++ b/_tcc_foto.ipynb
@@ -136,7 +136,6 @@
    "source": [
     "folder = \"datasets/campinas/41\"\n",
     "out_floder= \"datasets/campinas/41.1\"\n",
-    "\n",
     "for count, filename in enumerate(os.listdir(folder)):\n",
     "  read_file = pd.read_excel(os.path.join(folder, filename))\n",
     "  read_file.to_csv(os.path.join(out_floder,str('054B7020C020041_') + str(count) + str('.csv')), index= None, header=True)\n",
@@ -182,7 +181,7 @@
     "duplicadas = df_42_raw.duplicated(subset='Time', keep=False)\n",
     "df_42_raw = df_42_raw[~duplicadas]\n",
     "\n",
-    "df_42_raw.to_csv('054B7020C020042.csv', index=False)\n",
+    "# df_42_raw.to_csv('054B7020C020042.csv', index=False)\n",
     "\n",
     "print(df_42_raw.shape)"
    ]
@@ -220,7 +219,7 @@
     "df_41_raw = df_41_raw[~duplicadas]\n",
     "\n",
     "# Salva o DataFrame resultante em um arquivo CSV\n",
-    "df_41_raw.to_csv('054B7020C020041.csv', index=False)\n",
+    "# df_41_raw.to_csv('054B7020C020041.csv', index=False)\n",
     "\n",
     "# Exibe o formato do DataFrame resultante\n",
     "print(df_41_raw.shape)"
@@ -255,7 +254,7 @@
     "duplicadas = df_44_raw.duplicated(subset=\"Time\", keep=False)\n",
     "df_44_raw = df_44_raw[~duplicadas]\n",
     "\n",
-    "df_44_raw.to_csv('054B7020C020044.csv', index=False)\n",
+    "# df_44_raw.to_csv('054B7020C020044.csv', index=False)\n",
     "\n",
     "print(df_44_raw.shape)"
    ]
