nomeclatura das culuma corretas

--- a/_tcc_foto.ipynb
+++ b/_tcc_foto.ipynb
@@ -512,21 +512,21 @@
     "# Verifica se todas as colunas existem em df_41_raw\n",
     "if all(item in df_41_raw.columns for item in columns):\n",
     "    df_41 = df_41_raw[columns].copy()\n",
-    "    df_41.rename(columns = {'Time':'time', 'InverterSN':'id', 'Total DC Input Power(W)': 'dc_in_w', 'AC Output Total Power (Active)(W)': 'ac_out_w', 'Daily Generation (Active)(kWh)': 'daily_kwh', 'Total Generation (Active)(kWh)': 'total_kwh', 'Inverter Temperature(℃)': 'inverter_celsius'}, inplace = True)\n",
+    "    df_41.rename(columns = {'Time':'time', 'Count':'contatdor','Total Inverter Power(W)':'DC_power', 'AC Voltage U(V)':'tensão_AC', 'AC Current U(A)':'corrente_AC', 'Today Yield(kWh)':'acumulado_diário', 'Total Yield(kWh)':'Acumulado_total', 'IGBT  Temperature(℃)':'temperatura_IGBT'}, inplace = True)\n",
     "else:\n",
     "    print(\"Algumas colunas não foram encontradas em df_41_raw.\")\n",
     "\n",
     "# Verifica se todas as colunas existem em df_42_raw\n",
     "if all(item in df_42_raw.columns for item in columns):\n",
     "    df_42 = df_42_raw[columns].copy()\n",
-    "    df_42.rename(columns = {'Time':'time', 'InverterSN':'id', 'Total DC Input Power(W)': 'dc_in_w', 'AC Output Total Power (Active)(W)': 'ac_out_w', 'Daily Generation (Active)(kWh)': 'daily_kwh', 'Total Generation (Active)(kWh)': 'total_kwh', 'Inverter Temperature(℃)': 'inverter_celsius'}, inplace = True)\n",
+    "    df_42.rename(columns = {'Time':'time', 'Count':'contatdor','Total Inverter Power(W)':'DC_power', 'AC Voltage U(V)':'tensão_AC', 'AC Current U(A)':'corrente_AC', 'Today Yield(kWh)':'acumulado_diário', 'Total Yield(kWh)':'Acumulado_total', 'IGBT  Temperature(℃)':'temperatura_IGBT'}, inplace = True)\n",
     "else:\n",
     "    print(\"Algumas colunas não foram encontradas em df_42_raw.\")\n",
     "\n",
     "# Verifica se todas as colunas existem em df_44_raw\n",
     "if all(item in df_44_raw.columns for item in columns):\n",
     "    df_44 = df_44_raw[columns].copy()\n",
-    "    df_44.rename(columns = {'Time':'time', 'InverterSN':'id', 'Total DC Input Power(W)': 'dc_in_w', 'AC Output Total Power (Active)(W)': 'ac_out_w', 'Daily Generation (Active)(kWh)': 'daily_kwh', 'Total Generation (Active)(kWh)': 'total_kwh', 'Inverter Temperature(℃)': 'inverter_celsius'}, inplace = True)\n",
+    "    df_44.rename(columns = {'Time':'time', 'Count':'contatdor','Total Inverter Power(W)':'DC_power', 'AC Voltage U(V)':'tensão_AC', 'AC Current U(A)':'corrente_AC', 'Today Yield(kWh)':'acumulado_diário', 'Total Yield(kWh)':'Acumulado_total', 'IGBT  Temperature(℃)':'temperatura_IGBT'}, inplace = True)\n",
     "else:\n",
     "    print(\"Algumas colunas não foram encontradas em df_44_raw.\")\n"
    ]
