linhas de periodo não em conformidade

--- a/_tcc_foto.ipynb
+++ b/_tcc_foto.ipynb
@@ -173,57 +173,7 @@
     "for df, path in [(df_42_raw, 'datasets/campinas/42.1'), (df_41_raw, 'datasets/campinas/41.1'), (df_44_raw, 'datasets/campinas/44.1')]:\n",
     "    if os.path.exists(path + '.csv'):\n",
     "        os.remove(path + '.csv')\n",
-    "    df.to_csv(path + '.csv')\n",
-    "\n",
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "# Obtém a última data em cada DataFrame\n",
-    "last_date_42 = df_42_raw['Time'].max()\n",
-    "last_date_41 = df_41_raw['Time'].max()\n",
-    "last_date_44 = df_44_raw['Time'].max()\n",
-    "\n",
-    "# Define as datas dos solstícios e equinócios\n",
-    "spring_equinox = datetime(last_date_42.year, 3, 20)\n",
-    "summer_solstice = datetime(last_date_42.year, 6, 21)\n",
-    "fall_equinox = datetime(last_date_42.year, 9, 22)\n",
-    "winter_solstice = datetime(last_date_42.year, 12, 21)\n",
-    "\n",
-    "# Cria um intervalo de um ano a partir da última data\n",
-    "one_year_later = last_date_42 + timedelta(days=365)\n",
-    "\n",
-    "# Cria um DataFrame para cada estação\n",
-    "spring_df_42 = df_42_raw[(df_42_raw['Time'] >= spring_equinox) & (df_42_raw['Time'] < summer_solstice)]\n",
-    "summer_df_42 = df_42_raw[(df_42_raw['Time'] >= summer_solstice) & (df_42_raw['Time'] < fall_equinox)]\n",
-    "fall_df_42 = df_42_raw[(df_42_raw['Time'] >= fall_equinox) & (df_42_raw['Time'] < winter_solstice)]\n",
-    "winter_df_42 = df_42_raw[(df_42_raw['Time'] >= winter_solstice) & (df_42_raw['Time'] < one_year_later)]\n",
-    "\n",
-    "# Salva cada DataFrame como uma planilha CSV\n",
-    "spring_df_42.to_csv('datasets/campinas/42.1_spring.csv')\n",
-    "summer_df_42.to_csv('datasets/campinas/42.1_summer.csv')\n",
-    "fall_df_42.to_csv('datasets/campinas/42.1_fall.csv')\n",
-    "winter_df_42.to_csv('datasets/campinas/42.1_winter.csv')\n",
-    "\n",
-    "# Para df_41_raw\n",
-    "spring_df_41 = df_41_raw[(df_41_raw['Time'] >= spring_equinox) & (df_41_raw['Time'] < summer_solstice)]\n",
-    "summer_df_41 = df_41_raw[(df_41_raw['Time'] >= summer_solstice) & (df_41_raw['Time'] < fall_equinox)]\n",
-    "fall_df_41 = df_41_raw[(df_41_raw['Time'] >= fall_equinox) & (df_41_raw['Time'] < winter_solstice)]\n",
-    "winter_df_41 = df_41_raw[(df_41_raw['Time'] >= winter_solstice) & (df_41_raw['Time'] < one_year_later)]\n",
-    "\n",
-    "spring_df_41.to_csv('datasets/campinas/41.1_spring.csv')\n",
-    "summer_df_41.to_csv('datasets/campinas/41.1_summer.csv')\n",
-    "fall_df_41.to_csv('datasets/campinas/41.1_fall.csv')\n",
-    "winter_df_41.to_csv('datasets/campinas/41.1_winter.csv')\n",
-    "\n",
-    "# Para df_44_raw\n",
-    "spring_df_44 = df_44_raw[(df_44_raw['Time'] >= spring_equinox) & (df_44_raw['Time'] < summer_solstice)]\n",
-    "summer_df_44 = df_44_raw[(df_44_raw['Time'] >= summer_solstice) & (df_44_raw['Time'] < fall_equinox)]\n",
-    "fall_df_44 = df_44_raw[(df_44_raw['Time'] >= fall_equinox) & (df_44_raw['Time'] < winter_solstice)]\n",
-    "winter_df_44 = df_44_raw[(df_44_raw['Time'] >= winter_solstice) & (df_44_raw['Time'] < one_year_later)]\n",
-    "\n",
-    "spring_df_44.to_csv('datasets/campinas/44.1_spring.csv')\n",
-    "summer_df_44.to_csv('datasets/campinas/44.1_summer.csv')\n",
-    "fall_df_44.to_csv('datasets/campinas/44.1_fall.csv')\n",
-    "winter_df_44.to_csv('datasets/campinas/44.1_winter.csv')\n"
+    "    df.to_csv(path + '.csv')\n"
    ]
   },
   {
