trocando comentário de lugar

--- a/_tcc_foto.ipynb
+++ b/_tcc_foto.ipynb
@@ -159,16 +159,6 @@
     "    # Retorna o DataFrame resultante\n",
     "    return df_raw\n",
     "\n",
-    "\n",
-    "# # Processa os arquivos no diretório 'datasets/campinas/42.1'\n",
-    "# df_42_raw = process_files('datasets/campinas/42.1')\n",
-    "\n",
-    "# # Processa os arquivos no diretório 'datasets/campinas/41.1'\n",
-    "# df_41_raw = process_files('datasets/campinas/41.1')\n",
-    "\n",
-    "# # Processa os arquivos no diretório 'datasets/campinas/44.1'\n",
-    "# df_44_raw = process_files('datasets/campinas/44.1')\n",
-    "\n",
     "# Antes de salvar os novos arquivos, verifique se há arquivos antigos e exclua-os\n",
     "for df, path in [(df_42_raw, 'datasets/campinas/42.1'), (df_41_raw, 'datasets/campinas/41.1'), (df_44_raw, 'datasets/campinas/44.1')]:\n",
     "    if os.path.exists(path + '.csv'):\n",
@@ -478,7 +468,17 @@
     "    df_44 = df_44_raw[columns].copy()\n",
     "    df_44.rename(columns = {'Time':'time', 'Count':'contatdor','Total Inverter Power(W)':'DC_power', 'AC Voltage U(V)':'tensão_AC', 'AC Current U(A)':'corrente_AC', 'Today Yield(kWh)':'acumulado_diário', 'Total Yield(kWh)':'Acumulado_total', 'IGBT  Temperature(℃)':'temperatura_IGBT'}, inplace = True)\n",
     "else:\n",
-    "    print(\"Algumas colunas não foram encontradas em df_44_raw.\")\n"
+    "    print(\"Algumas colunas não foram encontradas em df_44_raw.\")\n",
+    "\n",
+    "\n",
+    "# # Processa os arquivos no diretório 'datasets/campinas/42.1'\n",
+    "# df_42_raw = process_files('datasets/campinas/42.1')\n",
+    "\n",
+    "# # Processa os arquivos no diretório 'datasets/campinas/41.1'\n",
+    "# df_41_raw = process_files('datasets/campinas/41.1')\n",
+    "\n",
+    "# # Processa os arquivos no diretório 'datasets/campinas/44.1'\n",
+    "# df_44_raw = process_files('datasets/campinas/44.1')"
    ]
   },
   {
