reorganizando o já feito

--- a/ideia_inicial_tcc_foto.ipynb
+++ b/ideia_inicial_tcc_foto.ipynb
@@ -64,7 +64,7 @@
     "def jupyter_settings():\n",
     "    # Usar matplotlib inline\n",
     "    %matplotlib inline\n",
-    "\n",
+    "    \n",
     "    # Configurar estilo do plot\n",
     "    plt.style.use(\"bmh\")\n",
     "    plt.rcParams[\"figure.figsize\"] = (25, 12)\n",
@@ -76,7 +76,7 @@
     "    pd.set_option(\"display.expand_frame_repr\", False)\n",
     "\n",
     "    # Configurar seaborn\n",
-    "    sns.set()\n",
+    "    sns.set_theme()\n",
     "\n",
     "\n",
     "def ml_error(model_name, y, yhat):\n",
