apagando os desnessesaios

--- a/novo_conceito.ipynb
+++ b/novo_conceito.ipynb
@@ -1479,7 +1479,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "projeto_fotovoltaico",
+   "display_name": "projeto_no_windows",
    "language": "python",
    "name": "python3"
   },
